Bug 404734 - KDESVN crashes when trying to close it (via close button)
Summary: KDESVN crashes when trying to close it (via close button)
Status: RESOLVED FIXED
Alias: None
Product: kdesvn
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: KDESvn default assignee
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2019-02-23 11:12 UTC by Valter Mura
Modified: 2019-06-01 15:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Valter Mura 2019-02-23 11:12:58 UTC
Application: kdesvn (2.0.95)

Qt Version: 5.12.0
Frameworks Version: 5.56.0
Operating System: Linux 4.15.0-38-generic x86_64
Distribution: KDE neon Developer Edition

-- Information about the crash:
- What I was doing when the application crashed:
I was closing the application through the "Close" button after updating translation language packages from
"svn://anonsvn.kde.org/home/kde/trunk/l10n-support/it/summit/messages"
and  "svn://anonsvn.kde.org/home/kde/trunk/l10n-support/it/summit/docmessages"

The crash can be reproduced every time.

-- Backtrace:
Application: kdesvn (kdesvn), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f761e8c8800 (LWP 15213))]

Thread 3 (Thread 0x7f75f337f700 (LWP 15217)):
#0  0x00007f7617a7e9f3 in futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5613adaaadf8) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x5613adaaada8, cond=0x5613adaaadd0) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x5613adaaadd0, mutex=0x5613adaaada8) at pthread_cond_wait.c:655
#3  0x00007f75f8ca5e6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/nouveau_dri.so
#4  0x00007f75f8ca5b97 in ?? () from /usr/lib/x86_64-linux-gnu/dri/nouveau_dri.so
#5  0x00007f7617a786db in start_thread (arg=0x7f75f337f700) at pthread_create.c:463
#6  0x00007f761aa9d88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f76058f2700 (LWP 15216)):
#0  0x00007f761aa90bf9 in __GI___poll (fds=0x7f7600004db0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f7615d42539 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7615d4264c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f761b5eb15b in QEventDispatcherGlib::processEvents (this=0x7f7600000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f761b58c64a in QEventLoop::exec (this=this@entry=0x7f76058f1d70, flags=..., flags@entry=...) at kernel/qeventloop.cpp:225
#5  0x00007f761b3b441a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:531
#6  0x00007f7619a37015 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f761b3b5bc2 in QThreadPrivate::start (arg=0x7f7619caed80) at thread/qthread_unix.cpp:361
#8  0x00007f7617a786db in start_thread (arg=0x7f76058f2700) at pthread_create.c:463
#9  0x00007f761aa9d88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f761e8c8800 (LWP 15213)):
[KCrash Handler]
#6  QSortFilterProxyModelPrivate::proxy_to_source (this=0x5613adb563e0, proxy_index=...) at itemmodels/qsortfilterproxymodel.cpp:553
#7  0x00007f761b55b681 in QSortFilterProxyModel::mapToSource (this=<optimized out>, proxyIndex=...) at itemmodels/qsortfilterproxymodel.cpp:3061
#8  0x00007f760438d589 in MainTreeWidgetData::sourceNode (left=false, index=..., this=<optimized out>) at ./src/svnfrontend/maintreewidget.cpp:97
#9  MainTreeWidget::SelectionList (this=0x5613adbe83c0) at ./src/svnfrontend/maintreewidget.cpp:387
#10 0x00007f760438f208 in MainTreeWidget::enableActions (this=this@entry=0x5613adbe83c0) at ./src/svnfrontend/maintreewidget.cpp:698
#11 0x00007f7604394759 in MainTreeWidget::closeMe (this=0x5613adbe83c0) at ./src/svnfrontend/maintreewidget.cpp:876
#12 0x00007f7604366c80 in kdesvnView::closeMe (this=0x5613adbe33e0) at ./src/kdesvnview.cpp:196
#13 0x00007f76043648d9 in kdesvnpart::closeUrl (this=0x5613adbe5370) at ./src/kdesvn_part.cpp:256
#14 0x00005613abd0d680 in kdesvn::fileClose (this=0x5613ada7ae30) at ./src/kdesvn.cpp:249
#15 0x00007f761b5bde25 in QMetaObject::activate (sender=sender@entry=0x5613adaf1770, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffe55f0f8b0) at kernel/qobject.cpp:3778
#16 0x00007f761b5be4f7 in QMetaObject::activate (sender=sender@entry=0x5613adaf1770, m=m@entry=0x7f761d188820 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffe55f0f8b0) at kernel/qobject.cpp:3631
#17 0x00007f761cab00f2 in QAction::triggered (this=this@entry=0x5613adaf1770, _t1=<optimized out>) at .moc/moc_qaction.cpp:380
#18 0x00007f761cab270c in QAction::activate (this=0x5613adaf1770, event=<optimized out>) at kernel/qaction.cpp:1166
#19 0x00007f761cb9ec7b in QAbstractButtonPrivate::click (this=0x5613adcc3de0) at widgets/qabstractbutton.cpp:397
#20 0x00007f761cb9eedd in QAbstractButton::mouseReleaseEvent (this=0x5613adcc3d50, e=0x7ffe55f0fe50) at widgets/qabstractbutton.cpp:1011
#21 0x00007f761cc8d9ba in QToolButton::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at widgets/qtoolbutton.cpp:622
#22 0x00007f761caf6838 in QWidget::event (this=0x5613adcc3d50, event=0x7ffe55f0fe50) at kernel/qwidget.cpp:9268
#23 0x00007f761cba00ab in QAbstractButton::event (this=this@entry=0x5613adcc3d50, e=e@entry=0x7ffe55f0fe50) at widgets/qabstractbutton.cpp:968
#24 0x00007f761cc8da54 in QToolButton::event (this=0x5613adcc3d50, event=0x7ffe55f0fe50) at widgets/qtoolbutton.cpp:985
#25 0x00007f761cab683c in QApplicationPrivate::notify_helper (this=this@entry=0x5613ad9f9ff0, receiver=receiver@entry=0x5613adcc3d50, e=e@entry=0x7ffe55f0fe50) at kernel/qapplication.cpp:3752
#26 0x00007f761cabeca8 in QApplication::notify (this=<optimized out>, receiver=0x5613adcc3d50, e=0x7ffe55f0fe50) at kernel/qapplication.cpp:3213
#27 0x00007f761b58e328 in QCoreApplication::notifyInternal2 (receiver=0x5613adcc3d50, event=0x7ffe55f0fe50) at kernel/qcoreapplication.cpp:1061
#28 0x00007f761b58e50e in QCoreApplication::sendSpontaneousEvent (receiver=receiver@entry=0x5613adcc3d50, event=event@entry=0x7ffe55f0fe50) at kernel/qcoreapplication.cpp:1463
#29 0x00007f761cabd29f in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x5613adcc3d50, event=event@entry=0x7ffe55f0fe50, alienWidget=0x5613adcc3d50, nativeWidget=0x5613ada7ae30, buttonDown=buttonDown@entry=0x7f761d1b78b0 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2699
#30 0x00007f761cb11a80 in QWidgetWindow::handleMouseEvent (this=this@entry=0x5613adced100, event=event@entry=0x7ffe55f102e0) at kernel/qwidgetwindow.cpp:661
#31 0x00007f761cb1434a in QWidgetWindow::event (this=0x5613adced100, event=0x7ffe55f102e0) at kernel/qwidgetwindow.cpp:281
#32 0x00007f761cab683c in QApplicationPrivate::notify_helper (this=this@entry=0x5613ad9f9ff0, receiver=receiver@entry=0x5613adced100, e=e@entry=0x7ffe55f102e0) at kernel/qapplication.cpp:3752
#33 0x00007f761cabddd0 in QApplication::notify (this=0x7ffe55f10750, receiver=0x5613adced100, e=0x7ffe55f102e0) at kernel/qapplication.cpp:3499
#34 0x00007f761b58e328 in QCoreApplication::notifyInternal2 (receiver=0x5613adced100, event=0x7ffe55f102e0) at kernel/qcoreapplication.cpp:1061
#35 0x00007f761b58e50e in QCoreApplication::sendSpontaneousEvent (receiver=receiver@entry=0x5613adced100, event=event@entry=0x7ffe55f102e0) at kernel/qcoreapplication.cpp:1463
#36 0x00007f761c04c52b in QGuiApplicationPrivate::processMouseEvent (e=0x5613ade43fc0) at kernel/qguiapplication.cpp:2102
#37 0x00007f761c04d695 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x5613ade43fc0) at kernel/qguiapplication.cpp:1837
#38 0x00007f761c02614b in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1068
#39 0x00007f760f9f430a in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#40 0x00007f7615d42387 in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007f7615d425c0 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#42 0x00007f7615d4264c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#43 0x00007f761b5eb13f in QEventDispatcherGlib::processEvents (this=0x5613ada64fe0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#44 0x00007f761b58c64a in QEventLoop::exec (this=this@entry=0x7ffe55f10680, flags=..., flags@entry=...) at kernel/qeventloop.cpp:225
#45 0x00007f761b595800 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1364
#46 0x00005613abd0c297 in main (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:89

Reported using DrKonqi
Comment 1 Christian Ehrlicher 2019-06-01 12:02:54 UTC
Happens when the log fill thread is still running when kdesvn is closed
Comment 2 Christian Ehrlicher 2019-06-01 15:46:08 UTC
Git commit 4cfa214d408b5e818ba77204225c5abb094f6d5f by Christian Ehrlicher.
Committed on 01/06/2019 at 15:44.
Pushed by chehrlic into branch 'master'.

Don't crash on exit when log fill thread is still running

M  +3    -0    src/svnfrontend/maintreewidget.cpp

https://commits.kde.org/kdesvn/4cfa214d408b5e818ba77204225c5abb094f6d5f