Don't crash on exit when log fill thread is still running

BUG: 404734